--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@kitconcept/volto-quote-block",
-  "version": "1.0.0-alpha.7",
+  "version": "1.0.0",
   "description": "volto-quote-block: Volto add-on",
   "main": "src/index.js",
   "license": "MIT",
